# Arb2PWL

./: .gitignore  Arb2PWLWidget.cpp  Arb2PWLWidget.h  Arb2PWLWidget.ui  AutoTrace.cpp  AutoTrace.h  AutoTrace.hpp  AutoTrace.hxx  CMakeLists.txt  ClickableScene.cpp  ClickableScene.h  CustomGraphicsView.h  Helpers.h  Helpers.hpp  Helpers.hxx  MooreTracing.cpp  MooreTracing.h  MooreTracing.hpp  form.cpp  form.h  form.ui  main.cpp
Tests/: TestAutoTrace.cpp
